Login and Register urls

--- a/ShareNotes/core/templates/core/base.html
+++ b/ShareNotes/core/templates/core/base.html
@@ -6,6 +6,7 @@
     <title>ShareNotes</title>
 </head>
 <body>
-    
+    <a href="registration/">Register</a>
+    <a href="login/">Log In</a>
 </body>
 </html>
