--- a/ShareNotes/notes/templates/notes/file_upload.html
+++ b/ShareNotes/notes/templates/notes/file_upload.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File Upload</title>
 </head>
-<body>
-    
-</body>
+<body>  
+    <form method="POST" class="post-form" enctype="multipart/form-data">  
+            {% csrf_token %}  
+            {{ form.as_p }}  
+            <button type="submit" class="save btn btn-default">Save</button>  
+    </form>  
+    </body>  
 </html>
