--- a/ShareNotes/registration/templates/registration/registration.html
+++ b/ShareNotes/registration/templates/registration/registration.html
@@ -1,34 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-</head>
-<body>
-    <form action="/registration/" method="POST">
-        {% csrf_token %}
-        <div>
-          <h1>Sign Up</h1>
-          <p>Please fill in this form to create an account.</p>
-          <hr>
-      
-          <label for="email"><b>Email</b></label>
-          <input type="email" placeholder="Enter Email" name="email" required>
+{% extends "registration/registration_base.html" %}
 
-          <label for="first_name"><b>First Name</b></label>
-          <input type="text" placeholder="First Name" name="first_name" required>
+    {% block title %}Registration{% endblock %}
 
-          <label for="last_name"><b>Last Name</b></label>
-          <input type="text" placeholder="Last Name" name="last_name" required>
-      
-          <label for="psw"><b>Password</b></label>
-          <input type="password" placeholder="Enter Password" name="psw" required>
-          
-          <div>
-            <button type="submit" class="signupbtn">Sign Up</button>
-          </div>
-        </div>
-      </form>
-</body>
-</html>
+    {%block names%}
+    <h1>Sign Up</h1>
+    <p>Please fill in this form to create an account.</p>
+    <hr>
+    <label for="first_name"><b>First Name</b></label>
+    <input type="text" placeholder="First Name" name="first_name" required>
+    
+    <label for="last_name"><b>Last Name</b></label>
+    <input type="text" placeholder="Last Name" name="last_name" required>
+    {% endblock %}
+    
