--- a/ShareNotes/notes/templates/notes/upload_note.html
+++ b/ShareNotes/notes/templates/notes/upload_note.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="{% static 'notes/css/upload_note.css' %}">
     <title>Upload Note</title>
 </head>
 <body>
-    <h1>Upload a Note</h1>
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Upload</button>
-    </form>
+    <div class="container">
+        <h1>Upload a Note</h1>
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Upload</button>
+        </form>
+    </div>
 </body>
 </html>
