--- a/ShareNotes/notes/templates/notes/gallery.html
+++ b/ShareNotes/notes/templates/notes/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'your_app/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'notes/styles.css' %}">
     <title>Photo Gallery</title>
 </head>
 <body>
