--- a/ShareNotes/notes/templates/notes/select_classroom.html
+++ b/ShareNotes/notes/templates/notes/select_classroom.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="{% static 'notes/css/select_classroom.css' %}">
     <title>Select Classroom</title>
 </head>
 <body>
-    <h1>Select a Classroom</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form }}
-        <button type="submit">Select</button>
-    </form>
+    <div class="container">
+        <h1>Select a Classroom</h1>
+        <form method="post">
+            {% csrf_token %}
+            {{ form }}
+            <button type="submit">Select</button>
+        </form>
+    </div>
 </body>
 </html>
