worked on displaying the file

--- a/ShareNotes/notes/templates/notes/index.html
+++ b/ShareNotes/notes/templates/notes/index.html
@@ -47,9 +47,9 @@
     <div class="notes-list">
         <h2>View Notes</h2>
         <ul>
-            {% for note in notes %}
+            {% for files in files %}
                 <li>
-                    <a href="/view/{{ note.id }}/">{{ note.title }}</a>
+                    <a href="/view/{{ file.id }}/"></a>
                 </li>
             {% endfor %}
         </ul>
