--- a/ShareNotes/notes/static/notes/css/styles.css
+++ b/ShareNotes/notes/static/notes/css/styles.css
@@ -31,6 +31,11 @@ nav a {
     color: #fff;
 }
 
+a:link, a:visited, a:hover, a:active{
+    color: #fff;
+    text-decoration: none;
+}
+
 .container {
     padding: 20px;
     text-align: center;
