--- a/ShareNotes/notes/templates/notes/index.html
+++ b/ShareNotes/notes/templates/notes/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/upload/">Upload Note</a></li>
-                    <li><a href="/notes/">View Notes</a></li>
+                    <li><a href="/log_out/">Log Out</a></li>
                 </ul>
             </nav>
         </div>
