--- a/ShareNotes/notes/templates/notes/index.html
+++ b/ShareNotes/notes/templates/notes/index.html
@@ -22,9 +22,9 @@
         <div class="side-menu">
             <h2>My Classes</h2>
             <ul>
-                <li><a href="/class/class1/">Class 1</a></li>
-                <li><a href="/class/class2/">Class 2</a></li>
-                <li><a href="/class/class3/">Class 3</a></li>
+                <li><a class="class_anchor" href="/class/class1/">Class 1</a></li>
+                <li><a class="class_anchor" href="/class/class2/">Class 2</a></li>
+                <li><a class="class_anchor" href="/class/class3/">Class 3</a></li>
                 <!-- Add more classes here -->
             </ul>
         </div>
@@ -49,7 +49,7 @@
         <ul>
             {% for file in files %}
                 <li>
-                    <a href="/view/{{ file.name }}/">File {{ file.id }}</a>
+                    <a class="the_files" href="/view/{{ file.name }}/">File {{ file.id }}</a>
                 </li>
             {% endfor %}
         </ul>
